--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-menu-topo></app-menu-topo>
-<app-menu-topo-mobile></app-menu-topo-mobile>
-<hr/>
-<app-conteudo-central></app-conteudo-central>
-<hr/>
-<app-portifolio-clientes></app-portifolio-clientes>
-<app-pre-rodape></app-pre-rodape>
-<hr/>
-<app-rodape></app-rodape>
-<router-outlet></router-outlet>
+<section fxLayout="column" fxLayoutAlign="space-evenly stretch">
+  <app-menu-topo></app-menu-topo>
+  <app-menu-topo-mobile></app-menu-topo-mobile>
+  <hr />
+  <app-conteudo-central></app-conteudo-central>
+  <hr />
+  <app-portifolio-clientes></app-portifolio-clientes>
+  <app-pre-rodape></app-pre-rodape>
+  <hr />
+  <app-rodape></app-rodape>
+  <router-outlet></router-outlet>
+</section>
