--- a/src/app/conteudo-central/conteudo-central.component.html
+++ b/src/app/conteudo-central/conteudo-central.component.html
@@ -1,3 +1,3 @@
-<p>
-  conteudo-central works!
-</p>
+<ul>
+  <li *ngFor="let dado of dados">Nome: {{ dado.nome }}<span> Apelido: {{ dado.apelido }} </span></li>
+</ul>
