--- a/src/app/portifolio-clientes/portifolio-clientes.component.html
+++ b/src/app/portifolio-clientes/portifolio-clientes.component.html
@@ -1,3 +1,9 @@
-<p>
-  portifolio-clientes works!
-</p>
+<section>
+    <h1>CLIENTES</h1>
+    <h2>A melhor forma de conhecer a qualidade dos nossos serviços
+        é através daqueles com quem trabalhamos.</h2>
+  </section>
+
+  <section>
+    <img *ngFor="let img of slide" src="{{ img }}" alt="slide-clientes" width="20%"/>
+</section>
