--- a/src/app/menu-topo-mobile/menu-topo-mobile.component.html
+++ b/src/app/menu-topo-mobile/menu-topo-mobile.component.html
@@ -1,3 +1,13 @@
-<p>
-  menu-topo-mobile works!
-</p>
+<section style="text-align: center">
+  <img src={{logo}} alt="logo estamparia pegadas" width="50px"/>
+  <button
+    *ngFor="let botao of menus.botoes; let i; of: index"
+    fxLayout="row"
+    fxLayoutAlign="space-evenly center"
+    mat-button
+    color="primary"
+    [routerLink]="botao"
+  >
+    {{ botao }}
+  </button>
+</section>
