--- a/src/app/pre-rodape/pre-rodape.component.html
+++ b/src/app/pre-rodape/pre-rodape.component.html
@@ -1,3 +1,11 @@
-<p>
-  pre-rodape works!
-</p>
+<section>
+  <img src="{{certificado01.img}}" alt="certificado 1"/>
+  <h1>{{ certificado01.titulo }}</h1>
+  <p>{{ certificado01.descricao }}</p>
+</section>
+
+<section>
+  <img src="{{certificado02.img}}" alt="certificado 2"/>
+  <h1>{{ certificado02.titulo }}</h1>
+  <p>{{ certificado02.descricao }}</p>
+</section>
