conexao entre backend e front finalizada

--- a/src/app/conteudo-central/contato/contato.component.html
+++ b/src/app/conteudo-central/contato/contato.component.html
@@ -30,8 +30,8 @@
 
 <section>
   <h3>Horário de funcionamento</h3>
-  <p type="text">{{ horario.diaDaSemana }}</p>
-  <p type="text">{{ horario.horario }}</p>
+  <p type="text">{{ atendimento.diaDaSemana }}</p>
+  <p type="text">{{ atendimento.horario }}</p>
 </section>
 
 <br />
@@ -48,7 +48,5 @@
 <br />
 
 <section>
-  <span>MAPS AQUI</span>
-  <br/>
   <iframe id="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.006362337198!2d-46.76975134888082!3d-23.604104768983305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5447f9873843%3A0x66e114df6c685ff4!2sR.+Vit%C3%B3rio+D&#39;amico+-+Jardim+Monte+Alegre%2C+Tabo%C3%A3o+da+Serra+-+SP%2C+05576-100!5e0!3m2!1spt-BR!2sbr!4v1550127533329" frameborder="0" style="border:0" allowfullscreen></iframe>
 </section>
