--- a/src/app/conteudo-central/conteudo-central.component.html
+++ b/src/app/conteudo-central/conteudo-central.component.html
@@ -49,11 +49,13 @@
       <li *ngFor="let item of propaganda02.lista">{{ item }}</li>
     </ul>
   </article>
-  <button mat-button color="primary">{{ propaganda02.btnText }}</button>
+  <button mat-button color="primary">{{ propaganda02.btnTxt }}</button>
 </section>
 
+<hr/>
+
 <section fxLayout="row">
-  <img src="{{ propaganda01.img }}" alt="sublimação" />
+  <img src="{{ propaganda03.img }}" alt="sublimação" />
   <h3>{{ propaganda03.titulo }}</h3>
   <p>{{ propaganda03.descricao }}</p>
   <article>
@@ -62,7 +64,7 @@
       <li *ngFor="let item of propaganda04.lista">{{ item }}</li>
     </ul>
   </article>
-  <button mat-button color="primary">{{ propaganda04.btnText }}</button>
+  <button mat-button color="primary">{{ propaganda04.btnTxt }}</button>
 </section>
 
 <hr />
