--- a/src/app/conteudo-central/sublimacao/sublimacao.component.html
+++ b/src/app/conteudo-central/sublimacao/sublimacao.component.html
@@ -6,15 +6,15 @@
 
   <!--imagem principal-->
   <div class="mySlides fade">
-    <h1 class="numbertext">{{ imgPoster.titulo }}</h1>
-    <img src="{{ imgPoster.img }}" style="width:20%" />
-    <h2 class="text">{{ imgPoster.descricao }}</h2>
+    <h1 class="numbertext">{{ poster.titulo }}</h1>
+    <img src="{{ poster.imagem }}" width="100%" />
+    <h2 class="text">{{ poster.descricao }}</h2>
   </div>
 </section>
 <br />
 <!--propaganda 01-->
 <section>
-  <img src="{{ propaganda01.img }}" alt="propaganda-img"/>
+  <img src="{{ propaganda01.imagem }}" alt="propaganda-imagem" width="50%"/>
   <h3>{{ propaganda01.titulo }}</h3>
   <p>{{ propaganda01.descricao }}</p>
 </section>
