--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -5,8 +5,8 @@
 
 <section>
   <h2>Horário de Atendimento</h2>
-  <h3>{{ horario.diaDaSemana }}</h3>
-  <p>{{ horario.horario }}</p>
+  <h3>{{ atendimento.diaDaSemana }}</h3>
+  <p>{{ atendimento.horario }}</p>
 </section>
 
 <footer>
