--- a/src/app/conteudo-central/orcamento/orcamento.component.html
+++ b/src/app/conteudo-central/orcamento/orcamento.component.html
@@ -22,7 +22,7 @@
     <button mat-button color="primary" (click)="tipoPessoa()">
       Pessoa fisica ou juridica?
     </button>
-    <p>Juridica *preferido</p>
+    <p>Juridica *DEFINIR COMO PREFERIDO NO SLIDER TOOGLE</p>
     <input *ngIf="formulario.pessoa === false" type="text" placeholder="CPF" />
     <input *ngIf="formulario.pessoa === true" type="text" placeholder="CNPJ" />
     <select>
@@ -33,10 +33,10 @@
     <br />
 
     <article>
-      <h2>{{ formulario.servicos.tituloServico }}</h2>
+      <h2>{{ formulario.servicos.titulo }}</h2>
       <div
         (click)="escolhaDoServico(i)"
-        *ngFor="let titulo of formulario.servicos.titulo; let i = index"
+        *ngFor="let titulo of formulario.servicos.tiposDeServicos; let i = index"
       >
         <h4>{{ titulo }}</h4>
         <div>
@@ -48,7 +48,7 @@
     <br />
 
     <article>
-      <h2>{{ detalhamento.titulo }}</h2>
+      <h2>{{ detalhamento }}</h2>
       <form>
         <input type="number" placeholder="Largura" />
         <input type="number" placeholder="Altura" />
