--- a/src/app/conteudo-central/contato/contato.component.html
+++ b/src/app/conteudo-central/contato/contato.component.html
@@ -15,7 +15,7 @@
 
     <br />
 
-    <button mat-button color="primary">Enviar Mensagem</button>
+    <button>Enviar Mensagem</button>
   </form>
 </section>
 
