--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -28,7 +28,7 @@
       estampas, dicas sobre sublimação e muito mais!
     </p>
     <input type="email" />
-    <button (click)="enviarEnderecoEmailCliente()" mat-button color="primary">
+    <button (click)="enviarEnderecoEmailCliente()">
       Receber as promoções
     </button>
   </section>
