--- a/src/app/conteudo-central/conteudo-central.component.html
+++ b/src/app/conteudo-central/conteudo-central.component.html
@@ -1,46 +1,117 @@
-<div fxLayout="row" class="slideshow-container">
-  <!--Avisos-->
-  <section *ngIf="aviso.ativo === true">
-    <p>{{ aviso.mensagem }}</p>
-  </section>
+<section class="container">
 
-  <!--Slide-->
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="{{ imgs[0] }}" style="width:20%" />
-    <div class="text">Caption Text</div>
+  <h1 class="texto-centralizado">Alterar textos e imagens dos slides</h1>
+
+  <div *ngFor="let slide of slides.titulo; let i = index" class="jumbotron">
+    <h3 class="display-4 texto-centralizado">Slide {{ i + 1 }}</h3>
+    <p class="lead">
+      Titulo
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto para o slide 1"
+      aria-label="Insira aqui o texto para o slide 1"
+      aria-describedby="button-addon2"
+      [(ngModel)]="slides.titulo[i]"
+    />
+    <hr class="my-4" />
+    <p>
+      Subtitulo
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto para o slide 1"
+      aria-label="Insira aqui o texto para o slide 1"
+      aria-describedby="button-addon2"
+      [(ngModel)]="slides.subtitulo[i]"
+    />
+    <hr class="my-4" />
+    <p>
+      link imagem
+    </p>
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Insira aqui o texto para o slide 1"
+      aria-label="Insira aqui o texto para o slide 1"
+      aria-describedby="button-addon2"
+      [(ngModel)]="slides.imgs[i]"
+    />
+    <hr class="my-4" />
+    <button
+      class="btn btn-primary btn-lg"
+      type="button"
+      id="button-addon2"
+      (click)="setSlide($event)"
+    >
+      Salvar alterações
+    </button>
   </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="{{ imgs[1] }}" style="width:20%" />
-    <div class="text">Caption Two</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="{{ imgs[2] }}" style="width:20%" />
-    <div class="text">Caption Three</div>
-  </div>
-
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
 <br />
-
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
+</section>
 
 <!--area propaganda-->
-<section fxLayout="row">
+<section>
+
+  <h1 class="texto-centralizado">Alterar textos e imagens da propaganda 1</h1>
+
+<section class="container">
+
+<div class="jumbotron">
+    <p class="lead">
+        Titulo
+      </p>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Insira aqui o texto para o slide 1"
+        aria-label="Insira aqui o texto para o slide 1"
+        aria-describedby="button-addon2"
+        [(ngModel)]="propaganda01.titulo"
+      />
+      <hr class="my-4" />
+      <p>
+        Descrição
+      </p>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Insira aqui o texto para o slide 1"
+        aria-label="Insira aqui o texto para o slide 1"
+        aria-describedby="button-addon2"
+        [(ngModel)]="propaganda01.descricao"
+      />
+      <hr class="my-4" />
+      <p>
+        link imagem
+      </p>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Insira aqui o texto para o slide 1"
+        aria-label="Insira aqui o texto para o slide 1"
+        aria-describedby="button-addon2"
+        [(ngModel)]="propaganda01.img"
+      />
+      <hr class="my-4" />
+      <button
+        class="btn btn-primary btn-lg"
+        type="button"
+        id="button-addon2"
+        (click)="setPropaganda01($event)"
+      >
+        Salvar alterações
+      </button>
+</div>
+
   <h1>{{ titulo }}</h1>
   <h2>{{ subtitulo }}</h2>
 </section>
 <section fxLayout="row">
-  <img src="{{ propaganda01.img }}" alt="sublimação" />
+  <img src="{{ propaganda01.img }}" alt="sublimação" style="width:100%" />
   <h3>{{ propaganda01.titulo }}</h3>
   <p>{{ propaganda01.descricao }}</p>
   <article>
@@ -49,13 +120,13 @@
       <li *ngFor="let item of propaganda02.lista">{{ item }}</li>
     </ul>
   </article>
-  <button mat-button color="primary">{{ propaganda02.btnTxt }}</button>
+  <button>{{ propaganda02.btnTxt }}</button>
 </section>
 
-<hr/>
+<hr />
 
 <section fxLayout="row">
-  <img src="{{ propaganda03.img }}" alt="sublimação" />
+  <img src="{{ propaganda03.img }}" alt="sublimação" style="width:100%" />
   <h3>{{ propaganda03.titulo }}</h3>
   <p>{{ propaganda03.descricao }}</p>
   <article>
@@ -64,7 +135,7 @@
       <li *ngFor="let item of propaganda04.lista">{{ item }}</li>
     </ul>
   </article>
-  <button mat-button color="primary">{{ propaganda04.btnTxt }}</button>
+  <button>{{ propaganda04.btnTxt }}</button>
 </section>
 
 <hr />
