--- a/src/app/conteudo-central/orcamento/orcamento.component.html
+++ b/src/app/conteudo-central/orcamento/orcamento.component.html
@@ -19,7 +19,7 @@
     <input type="tel" placeholder="Celular - Preferência Whatsapp" />
     <input type="text" placeholder="Empresa" />
     <p>Fisica</p>
-    <button mat-button color="primary" (click)="tipoPessoa()">
+    <button (click)="tipoPessoa()">
       Pessoa fisica ou juridica?
     </button>
     <p>Juridica *DEFINIR COMO PREFERIDO NO SLIDER TOOGLE</p>
@@ -63,8 +63,6 @@
     <br />
 
     <button
-      mat-button
-      color="primary"
       (click)="enviaFormulario()"
       [routerLink]="['orcamento']"
     >
