--- a/src/app/menu-topo/menu-topo.component.html
+++ b/src/app/menu-topo/menu-topo.component.html
@@ -1,13 +1,36 @@
-<section style="text-align: center">
-  <img src={{logo}} alt="logo estamparia pegadas" width="50px"/>
-  <button
-    *ngFor="let botao of menus.botoes; let i; of: index"
-    fxLayout="row"
-    fxLayoutAlign="space-evenly center"
-    mat-button
-    color="primary"
-    [routerLink]="botao"
-  >
-    {{ botao }}
-  </button>
+<section class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <img
+      src="{{ logo }}"
+      alt="logo estamparia pegadas"
+      width="50px"
+      class="navbar-brand"
+      [routerLink]="'home'"
+    />
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li *ngFor="let botao of menus.botoes" class="nav-item">
+          <a
+            [routerLink]="botao"
+            [routerLinkActive]="'active'"
+            class="nav-link"
+            href="{{ botao }}"
+            >{{ botao }}</a
+          >
+        </li>
+      </ul>
+    </div>
+  </nav>
 </section>
